Fix mobile content alignment

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -2307,8 +2307,9 @@
             }
             
             .main-content {
-                margin-left: 16%;
+                margin-left: 0;
                 max-width: 100vw;
+                width: 100%;
                 padding: 20px;
                 padding-bottom: calc(var(--footer-height) + 40px);
             }
